# sic-infit

./: Cargo.toml  README.md
assets/: display_config.ron
assets/prefabs/: background_forest.ron  character.ron  collectables.ron  end_structure.ron  enemy.ron  intro.ron  npc.ron  obstacles.ron  prop.ron
assets/prefabs/obstacles/: column.ron  platforms.ron
assets/prefabs/ui/: coins.ron  finish.ron  interaction.ron  pause.ron  start.ron  ui_imgs.ron
config/: bindings.ron
resources/: display_config.ron
resources/assets/: spritesheet.ron
resources/assets/character/: character.ron  player_anim_run64.ron
resources/prefabs/: background_forest.ron
resources/sprites/: spritesheet.ron
resources/ui/: fps.ron
src/: main.rs  state.rs
src/audio/: mod.rs
src/components/: animation.rs  direction.rs  mod.rs  motion.rs  npc.rs  parallax.rs  physics.rs  player.rs
src/entities/: background.rs  camera.rs  mod.rs  npc.rs  utils.rs
src/resources/: asset.rs  mod.rs
src/states/: finish.rs  gameplay.rs  loading.rs  mod.rs  pause.rs  starting.rs
src/systems/: animation.rs  camera.rs  character.rs  coin_pickup.rs  dialog.rs  direction.rs  health.rs  interact_button.rs  mod.rs  motion.rs  parallax.rs  physics.rs  player.rs  player_sound_effects.rs  transform.rs  ui.rs  utils.rs
