[package]
name = "sic_infit"
version = "0.1.0"
authors = ["'chddr' <spaceshroom175@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8", features = ["serde"] }
amethyst = "0.15.0"
serde = "1.0.110"
specs = "0.16.1"


[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]