[package]
name = "sic_infit"
version = "0.1.0"
authors = ["'chddr' <spaceshroom175@gmail.com> 'Reinhard' <magicfuture97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.8", features = ["serde"] }
amethyst = "0.15.0"
amethyst_physics = "0.2.0"
amethyst_nphysics = "0.2.0"
enum-map = "0.6.2"
almost = "0.2.0"
rand = "0.7.3"
rand_distr = "0.2.2"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]